--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,6 +13,21 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+services:
+  postgres:
+    image: postgres:18
+    environment:
+      POSTGRES_DB: inkeep_agents
+      POSTGRES_USER: appuser
+      POSTGRES_PASSWORD: password
+    options: >-
+      --health-cmd pg_isready
+      --health-interval 10s
+      --health-timeout 5s
+      --health-retries 5  # Will fail after 5 retries = ~50 seconds
+    ports:
+      - 5432:5432
+
 jobs:
   ci:
     runs-on: ubuntu-latest
