--- a/agents-manage-api/.env.example
+++ b/agents-manage-api/.env.example
@@ -1,5 +1,5 @@
 ENVIRONMENT=development
-DB_FILE_NAME=file:../local.db
+DATABASE_URL=your-pg-db-here
 
 NANGO_SECRET_KEY=
 NANGO_SERVER_URL="http://localhost:3050"
