--- a/create-agents-template/docker-compose.yml
+++ b/create-agents-template/docker-compose.yml
@@ -27,9 +27,7 @@ services:
     environment:
       - ENVIRONMENT
       - LOG_LEVEL
-      - DB_FILE_NAME=file:/inkeep-agents/db/local.db
-      - TURSO_DATABASE_URL
-      - TURSO_AUTH_TOKEN
+      - DATABASE_URL
       - INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET
       - NANGO_SERVER_URL=${NANGO_SERVER_URL:-http://localhost:3050}
       - NANGO_SECRET_KEY
@@ -47,9 +45,6 @@ services:
     environment:
       - ENVIRONMENT
       - LOG_LEVEL
-      - DB_FILE_NAME=file:/inkeep-agents/db/local.db
-      - TURSO_DATABASE_URL
-      - TURSO_AUTH_TOKEN
       - INKEEP_AGENTS_RUN_API_BYPASS_SECRET
       - ANTHROPIC_API_KEY
       - OPENAI_API_KEY
@@ -72,9 +67,7 @@ services:
     environment:
       - ENVIRONMENT
       - LOG_LEVEL
-      - DB_FILE_NAME=file:/inkeep-agents/db/local.db
-      - TURSO_DATABASE_URL
-      - TURSO_AUTH_TOKEN
+      - DATABASE_URL
     volumes:
       - inkeep-agents-db:/inkeep-agents/db
     restart: "no"
