--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,7 +123,7 @@ jobs:
           POSTGRES_USER: appuser
           POSTGRES_PASSWORD: password
         options: >-
-          --health-cmd pg_isready
+          --health-cmd "pg_isready -U appuser"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5  # Will fail after 5 retries = ~50 seconds
