enable Biome `noUselessElse` rule

--- a/biome.json
+++ b/biome.json
@@ -50,6 +50,7 @@
       "style": {
         "noUnusedTemplateLiteral": "off",
         "noNonNullAssertion": "warn",
+        "noUselessElse": "error",
         "useImportType": "error"
       },
       "performance": {
