Initial draft for copilot

--- a/agents-manage-ui/.env.example
+++ b/agents-manage-ui/.env.example
@@ -17,3 +17,8 @@ NANGO_SERVER_URL=http://localhost:3050
 PUBLIC_NANGO_SERVER_URL=http://localhost:3050
 PUBLIC_NANGO_CONNECT_BASE_URL=http://localhost:3051
 NANGO_SECRET_KEY=
+
+# for the chat to build copilot
+PUBLIC_INKEEP_COPILOT_AGENT_ID=''
+PUBLIC_INKEEP_COPILOT_PROJECT_ID=''
+PUBLIC_INKEEP_COPILOT_TENANT_ID=''
