fix: add --run flag to agents-manage-ui test script for consistency
- Updated test script to include --run flag to prevent watch mode when running from turbo
- Ensures consistent test execution behavior across all packages
- All tests passing

--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -37,7 +37,7 @@
     "format:check": "biome format",
     "typecheck": "next typegen && tsc --noEmit",
     "typecheck:watch": "tsc --noEmit --watch",
-    "test": "vitest",
+    "test": "vitest --run",
     "test:coverage": "vitest --run --coverage",
     "test:e2e": "cypress open",
     "test:e2e:run": "cypress run --headless",
