chore: ignore tsconfig.json files in Biome
- Added tsconfig.json to Biome linter excludes
- Prevents Biome from formatting tsconfig.json files that Next.js auto-modifies
- Resolves conflicts between Next.js auto-configuration and Biome formatting

--- a/biome.json
+++ b/biome.json
@@ -29,7 +29,8 @@
       "!**/out/**",
       "!**/*.css",
       "!**/.source/**",
-      "!**/.vercel/**"
+      "!**/.vercel/**",
+      "!**/tsconfig.json"
     ],
     "rules": {
       "recommended": true,
