--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -31,7 +31,7 @@
     "build:sync": "cp -r public .next/standalone/agents-manage-ui && mkdir -p .next/standalone/agents-manage-ui/.next/ && cp -r .next/static .next/standalone/agents-manage-ui/.next/static",
     "build": "next build --webpack && pnpm build:sync",
     "start": "node .next/standalone/agents-manage-ui/server.js",
-    "lint": "biome lint",
+    "lint": "biome lint --error-on-warnings",
     "lint:fix": "biome check --write",
     "format": "biome format --write",
     "format:check": "biome format",
