--- a/packages/create-agents/package.json
+++ b/packages/create-agents/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "tsc",
-    "lint": "biome lint src",
+    "lint": "biome lint --error-on-warnings",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
     "test": "vitest --run src/__tests__ --exclude src/__tests__/e2e/** --passWithNoTests",
