--- a/create-agents-template/docker-compose.yml
+++ b/create-agents-template/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      inkeep-agents-migrate:
-        condition: service_completed_successfully
+      inkeep-agents-manage-api:
+        condition: service_started
   inkeep-agents-manage-api:
     build:
       context: .
@@ -27,7 +27,7 @@ services:
     environment:
       - ENVIRONMENT
       - LOG_LEVEL
-      - DATABASE_URL
+      - DATABASE_URL=postgresql://appuser:password@inkeep-agents-db:5432/inkeep_agents
       - INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET
       - NANGO_SERVER_URL=${NANGO_SERVER_URL:-http://localhost:3050}
       - NANGO_SECRET_KEY
@@ -36,6 +36,8 @@ services:
     ports:
       - "3002:3002"
     depends_on:
+      inkeep-agents-db:
+        condition: service_healthy
       inkeep-agents-migrate:
         condition: service_completed_successfully
   inkeep-agents-run-api:
@@ -45,6 +47,7 @@ services:
     environment:
       - ENVIRONMENT
       - LOG_LEVEL
+      - DATABASE_URL=postgresql://appuser:password@inkeep-agents-db:5432/inkeep_agents
       - INKEEP_AGENTS_RUN_API_BYPASS_SECRET
       - ANTHROPIC_API_KEY
       - OPENAI_API_KEY
@@ -58,8 +61,24 @@ services:
     ports:
       - "3003:3003"
     depends_on:
+      inkeep-agents-db:
+        condition: service_healthy
       inkeep-agents-migrate:
         condition: service_completed_successfully
+  inkeep-agents-db:
+    image: postgres:18
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: inkeep_agents
+      POSTGRES_USER: appuser
+      POSTGRES_PASSWORD: password
+    volumes:
+      - inkeep-agents-db:/var/lib/postgresql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 2s
+      timeout: 3s
+      retries: 30
   inkeep-agents-migrate:
     build:
       context: .
@@ -67,9 +86,10 @@ services:
     environment:
       - ENVIRONMENT
       - LOG_LEVEL
-      - DATABASE_URL
-    volumes:
-      - inkeep-agents-db:/inkeep-agents/db
+      - DATABASE_URL=postgresql://appuser:password@inkeep-agents-db:5432/inkeep_agents
+    depends_on:
+      inkeep-agents-db:
+        condition: service_healthy
     restart: "no"
 volumes:
   inkeep-agents-db:
