--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -59,8 +59,8 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/mdx": "^2.0.13",
     "@types/node": "24.0.7",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
     "fast-glob": "^3.3.3",
     "next-validate-link": "^1.6.3",
     "postcss": "^8.5.6",
