--- a/agents-manage-api/package.json
+++ b/agents-manage-api/package.json
@@ -39,6 +39,7 @@
     "keytar": "^7.9.0"
   },
   "devDependencies": {
+    "@electric-sql/pglite": "^0.3.13",
     "@hono/vite-dev-server": "^0.20.1",
     "@types/node": "^20.11.24",
     "@vitest/coverage-v8": "^3.2.4",
@@ -48,8 +49,7 @@
     "typescript": "^5.3.3",
     "vite": "^7.1.11",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4",
-    "@electric-sql/pglite": "^0.3.13"
+    "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@10.11.0",
   "engines": {
