--- a/agents-manage-api/package.json
+++ b/agents-manage-api/package.json
@@ -24,10 +24,13 @@
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^1.0.2",
     "@inkeep/agents-core": "workspace:^",
+    "@inkeep/agents-mcp": "workspace:^",
+    "@modelcontextprotocol/sdk": "^1.17.0",
     "@nangohq/node": "^0.69.5",
     "@nangohq/types": "^0.69.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "fetch-to-node": "^2.1.0",
     "hono": "^4.10.4",
     "hono-pino": "^0.10.1",
     "nanoid": "^5.1.5",
