export mcp and import it into manage-api

--- a/packages/agents-mcp/package.json
+++ b/packages/agents-mcp/package.json
@@ -10,6 +10,10 @@
     ".": {
       "types": "./esm/index.d.ts",
       "default": "./esm/index.js"
+    },
+    "./src/index": {
+      "types": "./src/index.ts",
+      "default": "./src/index.ts"
     }
   },
   "bin": {
