Draft for diff components

--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -86,6 +86,7 @@
     "cmdk": "^1.1.1",
     "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
+    "diff": "^8.0.2",
     "lucide-react": "^0.539.0",
     "monaco-editor": "0.54.0",
     "nanoid": "^5.1.5",
