--- a/agents-manage-api/package.json
+++ b/agents-manage-api/package.json
@@ -20,6 +20,7 @@
     "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
+    "@hono/mcp": "^0.1.5",
     "@hono/node-server": "^1.14.3",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^1.0.2",
