--- a/package.json
+++ b/package.json
@@ -89,7 +89,9 @@
     "overrides": {
       "esbuild": "0.25.9",
       "zod": "^4.1.11",
-      "@inkeep/agents-mcp>zod": "^3.25.7"
+      "@inkeep/agents-mcp>zod": "^3.25.7",
+      "@modelcontextprotocol/sdk>zod": "^3.25.7",
+      "@anthropic-ai/mcpb>zod": "^3.25.7"
     },
     "patchedDependencies": {
       "@changesets/assemble-release-plan@6.0.9": "patches/@changesets__assemble-release-plan.patch"
