--- a/packages/agents-mcp/package.json
+++ b/packages/agents-mcp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inkeep/agents-mcp",
-  "version": "0.31.1",
+  "version": "0.0.1",
   "author": "Speakeasy",
   "type": "module",
   "sideEffects": false,
@@ -9,11 +9,7 @@
   "exports": {
     ".": {
       "types": "./esm/index.d.ts",
-      "default": "./esm/index.js"
-    },
-    "./src/index": {
-      "types": "./src/index.ts",
-      "default": "./src/index.ts"
+      "import": "./esm/index.js"
     }
   },
   "bin": {
