--- a/packages/agents-mcp/package.json
+++ b/packages/agents-mcp/package.json
@@ -20,7 +20,9 @@
     "build": "bun i && bun src/mcp-server/build.mts && tsc",
     "check": "npm run lint",
     "lint": "eslint --cache --max-warnings=0 src",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "fetch-openapi": "node scripts/fetch-openapi.mjs",
+    "watch": "node scripts/watch-and-fetch.mjs"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.0",
@@ -35,7 +37,9 @@
     "@types/bun": "^1.2.13",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.20",
+    "dotenv": "^16.4.7",
     "eslint": "^9.26.0",
+    "find-up": "^7.0.0",
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.31.1"
