--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -43,6 +43,7 @@
   },
   "clean-package": "./clean-package.config.json",
   "dependencies": {
+    "@composio/core": "^0.2.4",
     "@electric-sql/pglite": "^0.3.13",
     "@hono/node-server": "^1.14.3",
     "@hono/zod-openapi": "^1.0.2",
