--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -48,6 +48,7 @@
     "@ai-sdk/gateway": "^1.0.23",
     "@ai-sdk/google": "^2.0.14",
     "@ai-sdk/openai": "2.0.11",
+    "@ai-sdk/openai-compatible": "^1.0.27",
     "@ai-sdk/react": "2.0.11",
     "@hookform/resolvers": "^5.2.1",
     "@inkeep/agents-core": "workspace:^",
