--- a/agents-run-api/package.json
+++ b/agents-run-api/package.json
@@ -31,6 +31,7 @@
     "@ai-sdk/gateway": "^1.0.23",
     "@ai-sdk/google": "^2.0.14",
     "@ai-sdk/openai": "2.0.11",
+    "@ai-sdk/openai-compatible": "^1.0.27",
     "@ai-sdk/react": "2.0.11",
     "@alcyone-labs/modelcontextprotocol-sdk": "^1.16.0",
     "@hono/node-server": "^1.14.3",
