--- a/packages/agents-mcp/tsconfig.json
+++ b/packages/agents-mcp/tsconfig.json
@@ -1,5 +1,3 @@
-
-
 {
   "compilerOptions": {
     "allowJs": true,
@@ -29,7 +27,7 @@
     "strict": true,
     "target": "es2022",
     "tsBuildInfoFile": ".tsbuildinfo",
-    "useUnknownInCatchVariables": true,
+    "useUnknownInCatchVariables": true
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*.ts"]
