--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
-    "build": "NODE_ENV=production next build",
-    "dev": "next dev --turbo -p 3010",
+    "build": "next build",
+    "dev": "next --turbo -p 3010",
     "start": "next start",
     "lint": "biome lint",
     "lint:fix": "biome check --write",
@@ -19,8 +19,8 @@
     "validate-link": "node scripts/validate-link.mjs"
   },
   "dependencies": {
-    "@inkeep/agents-ui": "^0.15.3",
-    "@inkeep/agents-cli": "^0.33.2",
+    "@inkeep/agents-ui": "workspace:^",
+    "@inkeep/agents-cli": "workspace:^",
     "@inkeep/cxkit-react": "^0.5.98",
     "@inkeep/docskit": "^0.0.8",
     "@radix-ui/react-collapsible": "^1.1.1",
