--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
-    "build": "next build",
+    "build": "next build --experimental-analyze",
     "dev": "next --turbo -p 3010",
     "start": "next start",
     "lint": "biome lint",
@@ -19,8 +19,8 @@
     "validate-link": "node scripts/validate-link.mjs"
   },
   "dependencies": {
-    "@inkeep/agents-ui": "workspace:^",
-    "@inkeep/agents-cli": "workspace:^",
+    "@inkeep/agents-ui": "^0.15.3",
+    "@inkeep/agents-cli": "workspace:*",
     "@inkeep/cxkit-react": "^0.5.98",
     "@inkeep/docskit": "^0.0.8",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -40,7 +40,7 @@
     "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.503.0",
     "mermaid": "^11.12.0",
-    "next": "16.0.0",
+    "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
