--- a/packages/agents-manage-mcp/manifest.json
+++ b/packages/agents-manage-mcp/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": "0.3",
   "name": "@inkeep/agents-manage-mcp",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "description": "",
   "long_description": "Inkeep Agents Manage API: REST API for the management of the Inkeep Agent Framework.",
   "author": {
@@ -307,6 +307,10 @@
     {
       "name": "data-component-delete-data-component",
       "description": "Delete Data Component"
+    },
+    {
+      "name": "data-component-generate-data-component-render-sync",
+      "description": "Generate Data Component Render (Synchronous)"
     },
     {
       "name": "external-agents-list-external-agents",
