fix Vercel warnings - `the following environment variables are set on your Vercel project, but missing from "turbo.json". These variables WILL NOT be available to your application and may cause your build to fail.`

--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,17 @@
     "ENVIRONMENT",
     "DATABASE_URL",
     "PORT",
-    "LOG_LEVEL"
+    "LOG_LEVEL",
+    "INKEEP_AGENTS_MANAGE_API_URL",
+    "INKEEP_AGENTS_RUN_API_URL",
+    "INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET",
+    "INKEEP_AGENTS_RUN_API_BYPASS_SECRET",
+    "NANGO_SECRET_KEY",
+    "SIGNOZ_URL",
+    "SIGNOZ_API_KEY",
+    "TENANT_ID",
+    "NANGO_SERVER_URL",
+    "NANGO_CONNECT_BASE_URL"
   ],
   "tasks": {
     "sync:licenses": {
