adjust env vars and hide invite

--- a/.env.example
+++ b/.env.example
@@ -67,5 +67,11 @@ OAUTH_CLIENT_NAME=Inkeep Agent Framework
 OAUTH_CLIENT_URI=https://inkeep.com
 OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
 
+# ============ Auth ==============
+# BETTER_AUTH_SECRET=
+# INKEEP_AGENTS_MANAGE_UI_USERNAME=admin@example.com
+# INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
+DISABLE_AUTH=true
+
 # ========== SERVICE TOKENS ================
 # INKEEP_AGENTS_JWT_SIGNING_SECRET=
