--- a/.env.example
+++ b/.env.example
@@ -73,5 +73,10 @@ OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
 # INKEEP_AGENTS_MANAGE_UI_PASSWORD=adminADMIN!@12
 DISABLE_AUTH=true
 
+# AUTH0_DOMAIN=
+# NEXT_PUBLIC_AUTH0_DOMAIN=
+# AUTH0_CLIENT_ID=
+# AUTH0_CLIENT_SECRET=
+
 # ========== SERVICE TOKENS ================
 # INKEEP_AGENTS_JWT_SIGNING_SECRET=
