fix cypress race condition and delete success videos

--- a/agents-manage-ui/cypress/tsconfig.json
+++ b/agents-manage-ui/cypress/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "types": ["cypress", "node"],
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "bundler"
   },
   "include": ["**/*.ts"]
