--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -39,8 +39,8 @@
     "typecheck:watch": "tsc --noEmit --watch",
     "test": "vitest --run",
     "test:coverage": "vitest --run --coverage",
-    "test:e2e": "cypress open",
-    "test:e2e:run": "cypress run --headless",
+    "test:e2e": "cypress open --config-file cypress/cypress.config.ts",
+    "test:e2e:run": "cypress run --config-file cypress/cypress.config.ts --headless",
     "test:e2e:ci": "start-server-and-test start http-get://localhost:3000/default/projects test:e2e:run"
   },
   "dependencies": {
